--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #0A0C1C;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    mix-blend-mode: normal;
+}
+
 .center{
     width: 100%;
     display: grid;
@@ -22,6 +33,7 @@
     min-height: 446px;
     display: flex;
     flex-direction: row-reverse;
+    border-radius: 8px;
 }
 
 .card h1{
@@ -29,17 +41,6 @@
     font-size: 36px;
     line-height: 44px;
     margin-bottom: 25px;
-}
-
-body{
-    background-color: #0A0C1C;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 15px;
-    line-height: 25px;
-    color: #FFFFFF;
-    mix-blend-mode: normal;
 }
 
 .w50{
@@ -90,6 +91,7 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-radius: 0px 8px 8px 0px;
 
 }
 
@@ -110,14 +112,9 @@ body{
         padding: 60px;
     }
     #sideimage{
-        background-image: url(./images/image-header-desktop.jpg);
-        background-color: rgba(171, 92, 219, 1);
-        background-blend-mode: multiply;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
         width: 100%;
         height: 240px;
+        border-radius: 8px 8px 0px 0px;
     }
     .stats{
         flex-direction: column;
